actualizacion de imagenes

--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
                 <div class="carousel">
                     <div class="carousel-images">
                         <div class="carousel-slide">
-                            <img src="Img/dobby.jpg" alt="Imagen 1">
+                            <img src="Img/frierenjpg.jpg" alt="Imagen 1">
                             <div class="carousel-text">
                                 <h2>Título 1</h2>
                                 <p>Descripción breve para la imagen 1.</p>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <img src="Img/dobby.jpg" alt="Imagen 2">
+                            <img src="Img/allmight.png" alt="Imagen 2">
                             <div class="carousel-text">
                                 <h2>Título 2</h2>
                                 <p>Descripción breve para la imagen 2.</p>
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <img src="Img/dobby.jpg" alt="Imagen 3">
+                            <img src="Img/Alphonse.png" alt="Imagen 3">
                             <div class="carousel-text">
                                 <h2>Título 3</h2>
                                 <p>Descripción breve para la imagen 3.</p>
@@ -208,7 +208,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/CoffeHarry.jpg" alt="Colección 11">
+                                    <img src="Img/a.jpg" alt="Colección 11">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 11</h3>
@@ -219,7 +219,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/Harry.jpg" alt="Colección 12">
+                                    <img src="Img/b.jpg" alt="Colección 12">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 12</h3>
@@ -230,7 +230,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/BlueHarry.jpg" alt="Colección 13">
+                                    <img src="Img/c.jpg" alt="Colección 13">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 13</h3>
@@ -241,7 +241,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/CoffeHarry.jpg" alt="Colección 14">
+                                    <img src="Img/d.jpg" alt="Colección 14">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 14</h3>
@@ -252,7 +252,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/Harry.jpg" alt="Colección 15">
+                                    <img src="Img/e.jpg" alt="Colección 15">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 15</h3>
@@ -263,7 +263,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/BlueHarry.jpg" alt="Colección 16">
+                                    <img src="Img/F.jpg" alt="Colección 16">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 16</h3>
@@ -274,7 +274,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/CoffeHarry.jpg" alt="Colección 17">
+                                    <img src="Img/G.jpg" alt="Colección 17">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 17</h3>
@@ -285,7 +285,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/Harry.jpg" alt="Colección 18">
+                                    <img src="Img/H.jpg" alt="Colección 18">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 18</h3>
@@ -296,7 +296,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/BlueHarry.jpg" alt="Colección 19">
+                                    <img src="Img/i.jpg" alt="Colección 19">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 19</h3>
@@ -307,7 +307,7 @@
                         <div class="coleccion-item">
                             <div class="card">
                                 <div class="card-front">
-                                    <img src="Img/CoffeHarry.jpg" alt="Colección 20">
+                                    <img src="Img/j.jpg" alt="Colección 20">
                                 </div>
                                 <div class="card-back">
                                     <h3>Colección 20</h3>
